@@ -1,3 +1,7 @@
+2005-01-19 Mikhail Khodjaiants
+	Fix for bug 83051: Add global variables deletes existing ones when new added.
+	* AddGlobalsActionDelegate.java
+
 2005-01-18 Mikhail Khodjaiants
 	Fix for bug 82800: Make "Resume At Line" action retargettable.
 	* plugin.xml
